--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/lodash": "^4.14.195",
     "@types/node": "^20.3.1",
+    "axios": "^1.4.0",
     "dayjs": "^1.10.7",
     "emittery": "^0.10.2",
     "eslint": "^7.32.0",
@@ -22,11 +23,14 @@
     "gulp": "^4.0.2",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
+    "ioredis": "^5.3.2",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
+    "mongodb": "5.6",
     "prom-client": "^14.2.0",
     "tslib": "^2.5.3",
     "tslog": "^4.8.2",
-    "typescript-eslint": "^0.0.1-alpha.0"
+    "typescript-eslint": "^0.0.1-alpha.0",
+    "yargs-parser": "^21.1.1"
   }
 }
